tests/if/fun_in_then.lox
// error
if (true) fun foo() {}
